Cherry-pick r286631. rdar://problem/85928816

[Scroll Momentum Generator] Pages lose ability to momentum scroll after dragging between displays
    https://bugs.webkit.org/show_bug.cgi?id=233948
    rdar://86110813

    Reviewed by Tim Horton.

    This is a conservative fix for the bug. When a view moves to a new screen, WebPageProxy
    needs to unregister for full speed updates using the old displayID, and register
    using the new one.

    Longer term, it would be better if "full speed updates" was a per-observer concept,
    but that would mean registering an observer while wheel events are being received,
    which needs a bit more thought.

    * UIProcess/WebPageProxy.cpp:
    (WebKit::WebPageProxy::windowScreenDidChange):

    Canonical link: https://commits.webkit.org/244944@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286631 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240672.479@safari-612.4.2.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612.4.2.1-branch@286733 268f45cc-cd09-0410-ab3c-d52691b4dbfc